fix: Refactor on customer service