@@ -23,7 +23,7 @@ public class CustomerService {
     public List<CustomerDTO> findAll() {
         return customerRepository.findAll().stream()
                 .map(this::toDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     public CustomerDTO findById(String id) {
@@ -45,21 +45,178 @@ public class CustomerService {
     }
     
     public CustomerDTO create(CustomerDTO dto) {
-        log.info("Criando novo cliente: {}", dto.getEmail());
+        validateDataToCreation(dto);
+        Customer customer = buildCustomer(dto);
         
-        if (customerRepository.existsByEmail(dto.getEmail())) {
-            throw new RuntimeException("Email já cadastrado");
+        return toDTO(customerRepository.save(customer));
+    }
+
+    public CustomerDTO update(String id, CustomerDTO dto) {
+        Customer customer = customerRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Cliente não encontrado"));
+        validateDataToUpdate(dto, customer);
+        customer.setUpdatedAt(LocalDateTime.now());
+
+        return toDTO(customerRepository.save(customer));
+    }
+
+    public CustomerDTO updateInfo(String keycloakUserId, UpdateCustomerInfoDTO dto) {
+        Customer customer = findCustomerByKeycloakUserId(keycloakUserId);
+        
+        String cleanDocument = updateCustomerBasicInfo(customer, dto, keycloakUserId);
+        customer = saveCustomerToDatabase(customer);
+        
+        syncWithKeycloak(keycloakUserId, cleanDocument, dto, customer);
+        
+        return toDTO(customer);
+    }
+    
+    private Customer findCustomerByKeycloakUserId(String keycloakUserId) {
+        return customerRepository.findByKeycloakUserId(keycloakUserId)
+                .orElseThrow(() -> new RuntimeException("Cliente não encontrado"));
+    }
+    
+    private String updateCustomerBasicInfo(Customer customer, UpdateCustomerInfoDTO dto, String keycloakUserId) {
+        String cleanDocument = updateDocumentIfProvided(customer, dto, keycloakUserId);
+        updateBirthDateIfProvided(customer, dto);
+        return cleanDocument;
+    }
+    
+    private String updateDocumentIfProvided(Customer customer, UpdateCustomerInfoDTO dto, String keycloakUserId) {
+        if (dto.getDocument() == null) {
+            return null;
         }
         
-        if (dto.getDocument() != null && customerRepository.existsByDocument(dto.getDocument())) {
-            throw new RuntimeException("Documento já cadastrado");
+        String cleanDocument = cleanDocumentNumber(dto.getDocument());
+        validateDocumentNotInUse(cleanDocument, customer, keycloakUserId);
+        customer.setDocument(cleanDocument);
+        
+        return cleanDocument;
+    }
+    
+    private String cleanDocumentNumber(String document) {
+        return document.replaceAll("[^0-9]", "");
+    }
+    
+    private void validateDocumentNotInUse(String cleanDocument, Customer customer, String keycloakUserId) {
+        if (cleanDocument.equals(customer.getDocument())) {
+            return;
         }
         
-        if (dto.getKeycloakUserId() != null && customerRepository.existsByKeycloakUserId(dto.getKeycloakUserId())) {
-            throw new RuntimeException("Usuário Keycloak já possui cadastro");
+        customerRepository.findByDocument(cleanDocument).ifPresent(existing -> {
+            if (!existing.getKeycloakUserId().equals(keycloakUserId)) {
+                throw new RuntimeException("CPF já cadastrado para outro usuário");
+            }
+        });
+    }
+    
+    private void updateBirthDateIfProvided(Customer customer, UpdateCustomerInfoDTO dto) {
+        if (dto.getBirthDate() != null) {
+            customer.setBirthDate(dto.getBirthDate());
+        }
+    }
+    
+    private Customer saveCustomerToDatabase(Customer customer) {
+        customer.setUpdatedAt(LocalDateTime.now());
+        return customerRepository.save(customer);
+    }
+    
+    private void syncWithKeycloak(String keycloakUserId, String cleanDocument, 
+                                   UpdateCustomerInfoDTO dto, Customer customer) {
+        if (cleanDocument == null && dto.getBirthDate() == null) {
+            return;
         }
         
-        Customer customer = Customer.builder()
+        try {
+            updateKeycloakCustomAttributes(keycloakUserId, cleanDocument, dto);
+            updateKeycloakUsernameIfNeeded(keycloakUserId, cleanDocument, customer);
+        } catch (Exception e) {
+            log.error("Erro ao sincronizar com Keycloak: {}", e.getMessage());
+        }
+    }
+    
+    private void updateKeycloakCustomAttributes(String keycloakUserId, String cleanDocument, 
+                                                UpdateCustomerInfoDTO dto) {
+        java.util.Map<String, java.util.List<String>> attributes = buildKeycloakAttributes(cleanDocument, dto);
+        keycloakAdminService.updateCustomAttributes(keycloakUserId, attributes);
+    }
+    
+    private java.util.Map<String, java.util.List<String>> buildKeycloakAttributes(
+            String cleanDocument, UpdateCustomerInfoDTO dto) {
+        java.util.Map<String, java.util.List<String>> attributes = new java.util.HashMap<>();
+        
+        if (cleanDocument != null) {
+            attributes.put("document", java.util.List.of(cleanDocument));
+        }
+        
+        if (dto.getBirthDate() != null) {
+            attributes.put("birthDate", java.util.List.of(dto.getBirthDate().toString()));
+        }
+        
+        return attributes;
+    }
+    
+    private void updateKeycloakUsernameIfNeeded(String keycloakUserId, String cleanDocument, 
+                                                 Customer customer) {
+        if (cleanDocument == null) {
+            return;
+        }
+        
+        try {
+            String currentUsername = fetchCurrentUsername(keycloakUserId);
+            
+            if (shouldUpdateUsername(currentUsername, cleanDocument)) {
+                String newKeycloakUserId = performUsernameUpdate(keycloakUserId, cleanDocument, currentUsername);
+                updateCustomerKeycloakIdIfChanged(customer, keycloakUserId, newKeycloakUserId);
+            }
+            
+        } catch (Exception usernameError) {
+            log.error("Erro ao atualizar username: {}", usernameError.getMessage());
+        }
+    }
+    
+    private String fetchCurrentUsername(String keycloakUserId) {
+        java.util.Map<String, Object> currentUser = keycloakAdminService.getUserById(keycloakUserId);
+        return currentUser != null ? (String) currentUser.get("username") : null;
+    }
+    
+    private boolean shouldUpdateUsername(String currentUsername, String cleanDocument) {
+        return currentUsername != null && !currentUsername.equals(cleanDocument);
+    }
+    
+    private String performUsernameUpdate(String keycloakUserId, String cleanDocument, String currentUsername) {
+        return keycloakAdminService.updateUsername(keycloakUserId, cleanDocument);
+    }
+    
+    private void updateCustomerKeycloakIdIfChanged(Customer customer, String oldKeycloakUserId, 
+                                                    String newKeycloakUserId) {
+        if (newKeycloakUserId.equals(oldKeycloakUserId)) {
+            return;
+        }
+        
+        customer.setKeycloakUserId(newKeycloakUserId);
+        customerRepository.save(customer);
+    }
+    
+    public void delete(String id) {
+        Customer customer = customerRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Cliente não encontrado"));
+        
+        String keycloakUserId = customer.getKeycloakUserId();
+        
+        customerRepository.deleteById(id);
+        
+        if (keycloakUserId != null) {
+            try {
+                keycloakAdminService.deleteUser(keycloakUserId);
+            } catch (Exception e) {
+                log.error("Erro ao deletar usuário do Keycloak: {}", e.getMessage());
+            }
+        }
+    }
+
+    private static Customer buildCustomer(CustomerDTO dto) {
+        return Customer.builder()
                 .name(dto.getName())
                 .email(dto.getEmail())
                 .birthDate(dto.getBirthDate())
@@ -68,162 +225,46 @@ public class CustomerService {
                 .createdAt(LocalDateTime.now())
                 .updatedAt(LocalDateTime.now())
                 .build();
-        
-        customer = customerRepository.save(customer);
-        log.info("Cliente criado com sucesso: {}", customer.getId());
-        
-        return toDTO(customer);
     }
-    
-    public CustomerDTO update(String id, CustomerDTO dto) {
-        log.info("Atualizando cliente: {}", id);
-        
-        Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Cliente não encontrado"));
-        
+
+    private void validateDataToCreation(CustomerDTO dto) {
+        if (customerRepository.existsByEmail(dto.getEmail())) {
+            throw new RuntimeException("Email já cadastrado");
+        }
+
+        if (dto.getDocument() != null && customerRepository.existsByDocument(dto.getDocument())) {
+            throw new RuntimeException("Documento já cadastrado");
+        }
+
+        if (dto.getKeycloakUserId() != null && customerRepository.existsByKeycloakUserId(dto.getKeycloakUserId())) {
+            throw new RuntimeException("Usuário Keycloak já possui cadastro");
+        }
+    }
+
+    private void validateDataToUpdate(CustomerDTO dto, Customer customer) {
         if (dto.getEmail() != null && !dto.getEmail().equals(customer.getEmail())) {
             if (customerRepository.existsByEmail(dto.getEmail())) {
                 throw new RuntimeException("Email já cadastrado");
             }
             customer.setEmail(dto.getEmail());
         }
-        
+
         if (dto.getDocument() != null && !dto.getDocument().equals(customer.getDocument())) {
             if (customerRepository.existsByDocument(dto.getDocument())) {
                 throw new RuntimeException("Documento já cadastrado");
             }
             customer.setDocument(dto.getDocument());
         }
-        
+
         if (dto.getName() != null) {
             customer.setName(dto.getName());
         }
-        
+
         if (dto.getBirthDate() != null) {
             customer.setBirthDate(dto.getBirthDate());
         }
-        
-        customer.setUpdatedAt(LocalDateTime.now());
-        customer = customerRepository.save(customer);
-        
-        log.info("Cliente atualizado com sucesso: {}", id);
-        return toDTO(customer);
     }
-    
-    public CustomerDTO updateInfo(String keycloakUserId, UpdateCustomerInfoDTO dto) {
-        log.info("Atualizando informações do cliente: {}", keycloakUserId);
-        
-        Customer customer = customerRepository.findByKeycloakUserId(keycloakUserId)
-                .orElseThrow(() -> new RuntimeException("Cliente não encontrado"));
-        
-        log.debug("Customer encontrado - ID MongoDB: {}, Email: {}", customer.getId(), customer.getEmail());
-        
-        String cleanDocument = null;
-        
-        if (dto.getDocument() != null) {
-            cleanDocument = dto.getDocument().replaceAll("[^0-9]", "");
-            log.debug("CPF limpo: {} → {}", dto.getDocument(), cleanDocument);
-            
-            if (!cleanDocument.equals(customer.getDocument())) {
-                customerRepository.findByDocument(cleanDocument).ifPresent(existing -> {
-                    if (!existing.getKeycloakUserId().equals(keycloakUserId)) {
-                        throw new RuntimeException("CPF já cadastrado para outro usuário");
-                    }
-                });
-            }
-            
-            customer.setDocument(cleanDocument);
-        }
-        
-        if (dto.getBirthDate() != null) {
-            customer.setBirthDate(dto.getBirthDate());
-        }
-        
-        customer.setUpdatedAt(LocalDateTime.now());
-        customer = customerRepository.save(customer);
-        
-        log.info("✅ Informações salvas no MongoDB");
-        
-        if (cleanDocument != null || dto.getBirthDate() != null) {
-            try {
-                java.util.Map<String, java.util.List<String>> attributes = new java.util.HashMap<>();
-                
-                if (cleanDocument != null) {
-                    attributes.put("document", java.util.List.of(cleanDocument));
-                }
-                
-                if (dto.getBirthDate() != null) {
-                    attributes.put("birthDate", java.util.List.of(dto.getBirthDate().toString()));
-                }
-                
-                log.debug("Sincronizando atributos customizados com Keycloak: {}", attributes);
-                
-                keycloakAdminService.updateCustomAttributes(keycloakUserId, attributes);
-                
-                // ATUALIZAR USERNAME PARA CPF
-                // Sempre que o CPF for informado, garantir que o username seja o CPF
-                if (cleanDocument != null) {
-                    try {
-                        // Buscar usuário atual do Keycloak para verificar username
-                        java.util.Map<String, Object> currentUser = keycloakAdminService.getUserById(keycloakUserId);
-                        log.debug("Current Keycloak user object: {}", currentUser);
-                        String currentUsername = currentUser != null ? (String) currentUser.get("username") : null;
-                        
-                        // Se o username atual não é o CPF, atualizar
-                        if (currentUsername != null && !currentUsername.equals(cleanDocument)) {
-                            log.info("🔄 Username atual ({}) diferente do CPF ({}). Atualizando...", currentUsername, cleanDocument);
-                            
-                            // updateUsername retorna o NOVO keycloakUserId (pois o usuário foi recriado)
-                            String newKeycloakUserId = keycloakAdminService.updateUsername(keycloakUserId, cleanDocument);
-                            
-                            // Se o ID mudou, atualizar no MongoDB
-                            if (!newKeycloakUserId.equals(keycloakUserId)) {
-                                log.info("🔄 Atualizando keycloakUserId no MongoDB: {} -> {}", keycloakUserId, newKeycloakUserId);
-                                customer.setKeycloakUserId(newKeycloakUserId);
-                                customerRepository.save(customer);
-                            }
-                            
-                            log.info("✅ Username atualizado com sucesso de {} para CPF: {}", currentUsername, cleanDocument);
-                        } else if (currentUsername != null && currentUsername.equals(cleanDocument)) {
-                            log.info("ℹ️ Username já é o CPF: {}. Nenhuma atualização necessária.", cleanDocument);
-                        }
-                    } catch (Exception usernameError) {
-                        log.error("❌ Erro ao atualizar username (atributos foram salvos)", usernameError);
-                        // Não propagar o erro - os atributos já foram salvos
-                    }
-                }
-            } catch (Exception e) {
-                log.error("❌ Erro ao sincronizar atributos com Keycloak (dados salvos no MongoDB): {}", e.getMessage());
-            }
-        }
-        
-        log.info("✅ Atualização concluída com sucesso");
-        return toDTO(customer);
-    }
-    
-    public void delete(String id) {
-        log.info("Deletando cliente: {}", id);
-        
-        Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Cliente não encontrado"));
-        
-        String keycloakUserId = customer.getKeycloakUserId();
-        
-        customerRepository.deleteById(id);
-        log.info("Cliente deletado do MongoDB: {}", id);
-        
-        if (keycloakUserId != null) {
-            try {
-                keycloakAdminService.deleteUser(keycloakUserId);
-                log.info("Usuário deletado do Keycloak: {}", keycloakUserId);
-            } catch (Exception e) {
-                log.error("Erro ao deletar usuário do Keycloak (MongoDB já foi deletado): {}", e.getMessage());
-            }
-        }
-        
-        log.info("✅ Cliente deletado com sucesso");
-    }
-    
+
     private CustomerDTO toDTO(Customer customer) {
         return CustomerDTO.builder()
                 .id(customer.getId())
